[package]
name = "diceware-rust"
version = "0.3.0"
authors = ["Jacob Morzinski <jmorzins@mit.edu>"]
description = "Print random words from the diceware list"
edition = "2018"

[[bin]]
name = "diceware"
path = "src/main.rs"

[lib]
name = "diceware"
path = "src/lib.rs"

[dependencies]
derive_more = "0.15.0"
rand = "0.7.2"

[dependencies.clap]
version = "~2.32"
default-features = false
