[package]
name = "diceware-rust"
version = "0.6.2"
authors = ["Jacob Morzinski <morzinski@gmail.com>"]
description = "Print random words from the diceware list"
edition = "2018"

[[bin]]
name = "diceware"
path = "src/main.rs"
doc = false

[lib]
name = "diceware"
path = "src/lib.rs"

[dependencies]
derive_more = "0.15.0"
rand = "0.7.2"

[dependencies.structopt]
version = "0.3.*"
default-features = false
features = ["suggestions"]
